chore: update arm os

--- a/.github/workflows/docker-database.yml
+++ b/.github/workflows/docker-database.yml
@@ -20,7 +20,7 @@ jobs:
           - platform: linux/amd64
             os: ubuntu-latest
           - platform: linux/arm64
-            os: ubuntu-latest
+            os: ubuntu-22.04-arm
     runs-on: ${{ matrix.os }}
     name: Build ${{ matrix.platform }} Image
     steps:
